@@ -1,4 +1,5 @@
-#   Copyright 1997, 1998, 1999 Free Software Foundation, Inc.
+# Copyright 1997, 1998, 1999, 2001, 2003, 2004
+# Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -32,6 +33,24 @@ if ![file isdirectory ${objdir}/${subdir}] then {
 
 set prms_id 0
 set bug_id 0
+
+set testfile weird
+set srcfile ${objdir}/${subdir}/weird.s
+set binfile ${objdir}/${subdir}/weirdx.o
+
+if { [ get_compiler_info "$binfile" ] } {
+    return -1
+}
+
+if { $hp_cc_compiler || $hp_aCC_compiler } {
+    # The native hp-ux assembler does not support stabs at all.
+    # If the compiler is native hp-ux, of course the assembler is too.
+    # But if someone builds gcc with the native assembler (not recommended)
+    # rather than the gnu assembler, then this logic will not suppress it.
+    # -- chastain 2004-01-07
+    unsupported "stabs with hp-ux assembler"
+    continue
+}
 
 proc do_tests {} {
 	global binfile
@@ -236,9 +255,6 @@ proc print_weird_var { var } {
 
 # Don't use gdb_load; it doesn't bitch if the loading produced some
 # error messages during symbol reading.
-set testfile weird
-set srcfile ${objdir}/${subdir}/weird.s
-set binfile ${objdir}/${subdir}/weirdx.o
 
 global target_os
 set sedscript ${srcdir}/${subdir}/aout.sed
@@ -266,19 +282,12 @@ switch -glob ${target_triplet} {
     }
 }
 
-
 # Hope this is a Unix box.
 set exec_output [remote_exec build "sed" "-f ${sedscript}" "${srcdir}/${subdir}/weird.def" "${srcfile}"]
 if { [lindex $exec_output 0] != 0 } {
     perror "Couldn't make test case. $exec_output"
     return -1
 }
-
-# HP's assembler has no idea of what to do with .stab directives; detect the
-# use of HP compilers and escape from here.  (No doubt a better heuristic
-# could be devised.)
-
-if { [ info exists CC ] && [ string first "/opt/ansic/bin/cc" "$CC" ] >= 0 } then { continue }
 
 if  { [gdb_compile "${srcfile}" "${binfile}" object ""] != "" } {
      gdb_suppress_entire_file "Testcase compile failed, so all tests in this file will automatically fail."
